# crazyswarm2

./: log3402179427.csv  params4154392860.csv  params639369448.csv
cache/: 322D300A.json  DE88261C.json
crazyflie/config/: crazyflies.yaml  motion_capture.yaml
crazyflie/launch/: launch.py
crazyflie/src/: crazyflie_server.cpp
crazyflie_examples/: package.xml  setup.cfg
crazyflie_examples/crazyflie_examples/: cmdVelocityCircle.py  cmd_full_state.py  demo.py  figure8.py  hello_world.py  localization_test.py  nice_hover.py  test_nn_network.py
crazyflie_examples/crazyflie_examples/data/: sine.csv
localization_characterization/: CMakeLists.txt  package.xml  setup.cfg
localization_characterization/localization_characterization/: onboard_listener.py
localization_test/: package.xml  setup.cfg  setup.py
localization_test/localization_test/: localization_listener.py  vicon_listener.py
